--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         <li>Projet 1 : Site web simple</li>
     </ul>
 </section>
+<footer>
+    <p>Contact : ex@email.com</p>
+</footer>
 </body>
 </html>
